# nightshift

./: .gitignore  2  LICENSE.md  README.md  bunfig.toml  demo_pytorch.py  evalExample.json  install.sh  nightshift.json  opencode.json  package.json  parsers-config.ts  pyproject.toml  ralph.ts  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: agent-routines.mdx  cli.mdx  configuration.mdx  contributing.mdx  development.mdx  docs.json  eval.mdx  install.mdx  installation.mdx  introduction.mdx  package-lock.json  package.json  quickstart.mdx  ralph-loop.mdx  sandbox.mdx  styles.css  tui.mdx  worktrees.mdx
docs/administration/: api-keys.mdx  backups.mdx
docs/agent-routines/: bootstrap.mdx
docs/contributing/: deploying-changes.mdx  dev-setup.mdx
docs/deployment/: architecture.mdx  cost-management.mdx  provision.mdx  server.mdx  verify.mdx
docs/eval/: boot-eval.mdx
docs/sdk/: agent-config.mdx  quickstart.mdx
docs/system/: gollum.mdx  (+2 more)
examples/: basic_agent.py  code_reviewer.py  edit_agent.py  hooks_agent.py  mcp_agent.py  multi_agent.py  net_test.py  oai_agent.py  pyproject.toml  smoke_test.py  stateful_agent.py  web_researcher.py
infra/: bake-rootfs.sh  cron.sh  deploy.sh  production.sh  setup.sh  teardown.sh  test.sh  upgrade.sh
nightshiftd/: Makefile  config.dev.toml  go.mod  go.sum
rootfs/: build-rootfs.sh  init
script/: build.ts
src/: bootstrap-prompt.test.ts  bootstrap-prompt.ts  index.test.ts  index.ts  sandbox.ts
test/: index.test.ts  sandbox.test.ts
tests/: bootstrap-prompt.test.ts  core.test.ts  index.test.ts  install-e2e.test.ts  sandbox.test.ts  test_config.py  test_deploy_api.py  test_deploy_cli.py  test_events.py  test_protocol.py  test_registry.py  test_sdk.py  test_vm_runtime_pool.py
(+180 files in other folders)
